--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ language: zh
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://leisuping.github.io/
-root: /
+root: /MyBlog
 permalink: :title/
 permalink_defaults:
 pretty_urls:
@@ -26,14 +26,14 @@ permalink_pinyin:
   separator: '-'
 
 # Directory
-source_dir: source
-public_dir: public
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
-code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
+# source_dir: source
+# public_dir: public
+# tag_dir: tags
+# archive_dir: archives
+# category_dir: categories
+# code_dir: downloads/code
+# i18n_dir: :lang
+# skip_render:
 
 # Writing
 new_post_name: :title.md # File name of new posts
