--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,24 @@ permalink_pinyin:
   enable: true
   separator: '-'
 
-# Directory
-# source_dir: source
-# public_dir: public
-# tag_dir: tags
-# archive_dir: archives
-# category_dir: categories
-# code_dir: downloads/code
-# i18n_dir: :lang
-# skip_render:
+# 添加emoji表情支持
+githubEmojis:
+  enable: true
+  className: github-emoji
+  inject: true
+  styles:
+  customEmojis:
+
+# 添加 RSS 订阅支持
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
 
 # Writing
 new_post_name: :title.md # File name of new posts
