--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true # 在建立文件时,Hexo 会自动建立一个与文章同名的文件夹，这样就可以把与该文章相关的所有资源（图片）都放到那个文件夹里方便后面引用
 relative_link: false
 future: true
 # 代码高亮配置
