--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 楠竹
 description: 当然，还是会有不可逾越的界限
 keywords: "楠竹菇凉的博客"
 author: nzgl
-language: zh
+language: zh-CN
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -77,7 +77,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 12
   order_by: -date
 
 # Category & Tag
@@ -100,7 +100,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 12
 pagination_dir: page
 
 # Include / Exclude file(s)
