--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -345,16 +345,18 @@ livere:
 # The configuration of the Valine comment module is not activated by default.
 # To use it, activate the configuration item and set appId and appKey.
 # Valine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项，并设置 appId 和 appKey.
+
+# valine: https://cdn.jsdelivr.net/npm/valine@1.3.9/dist/Valine.min.js
 valine:
-  enable: false
-  appId:
-  appKey:
+  enable: true
+  appId: jh93KUbfezH8yQMlyJ4Cav1J-MdYXbMMI
+  appKey: XdONuihOkTuT0WQSnuh7otLb
   notify: false
   verify: false
   visitor: true
-  avatar: 'mm' # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
+  avatar: 'robohash' # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
   pageSize: 10
-  placeholder: 'just go go' # Comment Box placeholder
+  placeholder: '欢迎畅所欲言' # Comment Box placeholder
   background: /medias/comment_bg.png
   coolpushkey: 
 
