--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -342,6 +342,14 @@ livere:
   enable: false
   uid:
 
+# 腾讯人机验证
+# 注意：目前只适配和测试了valine，其它评论系统未调试验证！
+# 介绍: https://cloud.tencent.com/document/product/1110/36841
+# 管理验证码: https://console.cloud.tencent.com/captcha/graphical
+tcaptcha:
+  enable: true
+  appid: xxxxxxxxxx # 你的appid
+
 # The configuration of the Valine comment module is not activated by default.
 # To use it, activate the configuration item and set appId and appKey.
 # Valine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项，并设置 appId 和 appKey.
@@ -370,6 +378,17 @@ minivaline:
   # emoticonUrl 等列表选项 可参考 https://github.com/MiniValine/hexo-next-minivaline
   # 下面是一个例子：
   serverURL: https://minivaline.your-domain.top
+
+# The configuration of the Waline comment module is not activated by default.
+# To use it, activate the configuration item.
+# Waline 评论模块的配置，默认为不激活，如要使用，就请激活该配置项
+# See: https://waline.js.org/
+waline:
+  enable: false
+  # Waline 服务端部署参考 https://waline.js.org/guide/server/intro.html 客户端和服务端版本需一致
+  # 下面是一个例子，请替换成自己的服务端
+  serverURL: https://waline.your-domain.com
+  avatar: 'mp' # Gravatar style : ''/mp/identicon/monsterid/wavatar/retro/hide
 
 changyan:
   enable: false
@@ -458,7 +477,8 @@ libs:
     crypto: /libs/cryptojs/crypto-js.min.js
     echarts: /libs/echarts/echarts.min.js
     gitalk: /libs/gitalk/gitalk.min.js
-    valine: /libs/valine/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js  默认为 /libs/valine/Valine.min.js
+    valine: https://cdn.jsdelivr.net/npm/valine@1.3.9/dist/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js  默认为 /libs/valine/Valine.min.js
+    waline: /libs/waline/Waline.min.js # 若想保持最新版，请替换为 https://cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js 默认为(1.5.2版本) /libs/valine/Valine.min.js
     minivaline: /libs/minivaline/MiniValine.js # latest
     twikoo: /libs/twikoo/twikoo.all.min.js # 若想保持最新版，请替换为 https://cdn.jsdelivr.net/npm/twikoo/dist/twikoo.all.min.js  默认为 /libs/twikoo/twikoo.all.min.js
     jqcloud: /libs/jqcloud/jqcloud-1.0.4.min.js
